--- a/palmtreedesigns/css/mystyles.css
+++ b/palmtreedesigns/css/mystyles.css
@@ -100,7 +100,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .card {
-    width: 100%;
+    width: 80%;
     padding: 0 auto;
     margin: 0 auto;
     text-align: center;
@@ -125,7 +125,7 @@ h1, h2, h3, h4, h5, h6, p {
     color: black;
     margin: 0 auto;
     font-weight: bolder;
-    font-size: 0.7rem;
+    font-size: 2rem;
     padding: 5px 7px;
     text-align: right;
     top: 0%;
@@ -602,6 +602,7 @@ h1, h2, h3, h4, h5, h6, p {
     text-align:center;
     width: 100%;
     padding-left: 0px;
+    padding-top: 50px;
 }
 
 .responsive {
@@ -879,7 +880,7 @@ iframe {
  }
 
  .text-box p {
-    font-size: 13px;
+    font-size: 15px;
 
  }
 
@@ -1276,6 +1277,7 @@ iframe {
     text-align:center;
     width: 100%;
     padding-left: 60px;
+    padding-top: 0px;
 }
 
 .responsive {
@@ -1496,6 +1498,7 @@ iframe {
     padding-left: 60px;
     text-align:center;
     width: 100%;
+    padding-top: 0px;
 }
 
 .toggleimage {
