--- a/palmtreedesigns/css/mystyles.css
+++ b/palmtreedesigns/css/mystyles.css
@@ -588,6 +588,11 @@ h1, h2, h3, h4, h5, h6, p {
         padding-top: 20px;
     }
 
+
+    .copyright {
+        margin-bottom: 0rem !important;
+    }
+
    
 /* Image toggle */
 
