Styles changed, tidied up the format, copyright margin

--- a/palmtreedesigns/css/mystyles.css
+++ b/palmtreedesigns/css/mystyles.css
@@ -417,6 +417,7 @@ h1, h2, h3, h4, h5, h6, p {
     font-family: 'Ubuntu Condensed', sans-serif; 
     font-size: 20px;
     padding-top: 30px;
+    padding-bottom: 10px;
 }
 
 .card-footer3 button {
@@ -591,6 +592,7 @@ h1, h2, h3, h4, h5, h6, p {
 
     .copyright {
         margin-bottom: 0rem !important;
+        padding-bottom: 20px;
     }
 
    
@@ -750,9 +752,9 @@ iframe {
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
   @media screen and (min-width: 1800px) {
     .insta-column {
-      -ms-flex: 20%;
-      flex: 20%;
-      max-width: 20%;
+      -ms-flex: 25%;
+      flex: 25%;
+      max-width: 25%;
       margin: 0 auto;
     }
   }
@@ -1220,6 +1222,7 @@ iframe {
     font-family: 'Ubuntu Condensed', sans-serif; 
     font-size: 20px;
     padding-top: 30px;
+    padding-bottom: 10px;
 }
 
 .card-footer3 button {
