--- a/palmtreedesigns/css/mystyles.css
+++ b/palmtreedesigns/css/mystyles.css
@@ -516,6 +516,11 @@ h1, h2, h3, h4, h5, h6, p {
         padding-left: 15px;
         padding-right: 15px;
     }
+
+    .text-center {
+        padding-right: 0px 0px 0px 0px !important;
+    }
+    
     
     .extrasection {
         margin-top: 100px;
