Changed bootstrap file again

--- a/palmtreedesigns/css/mystyles.css
+++ b/palmtreedesigns/css/mystyles.css
@@ -218,6 +218,15 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 30px;
     
 }
+ /*
+.d-flex {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+
+}
+
+*/
+
 
 .footer2 {
     text-align: center;
